--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
         <!-- Styles -->
         <link rel="stylesheet" href="./assets/css/styles.css" />
+
+        <!-- responsive -->
+         <link rel="stylesheet" href="./assets/css/responsive.css" />
     </head>
     <body>
         <!-- Header -->
