them file js tuong tac

--- a/index.html
+++ b/index.html
@@ -614,5 +614,7 @@
                 </div>
             </div>
         </footer>
+        <!-- JavaScript -->
+         <script src="./assets/js/script.js"></script>
     </body>
 </html>
