--- a/index.html
+++ b/index.html
@@ -615,6 +615,6 @@
             </div>
         </footer>
         <!-- JavaScript -->
-         <script src="./assets/js/script.js"></script>
+         <script src="assets/js/script.js"></script>
     </body>
 </html>
