update blog va footer

--- a/index.html
+++ b/index.html
@@ -448,11 +448,12 @@
                             <div class="info">
                                 <span class="date">18/10/2024</span>
                                 <h3 class="title">
-                                    <a href="#!">
+                                    <a href="https://hust.edu.vn/vi/news/tin-tuc-su-kien/tap-doan-sekisho-cam-ket-dong-hanh-cung-bach-khoa-ha-noi-trong-hoat-dong-ngoai-khoa-599006.html">
                                        Tập đoàn Sekisho cam kết đồng hành cùng Bách khoa Hà Nội trong hoạt động ngoại khóa
                                     </a>
                                 </h3>
-                                <a href="#!" class="btn">Đọc thêm</a>
+                                <a href="https://hust.edu.vn/vi/news/tin-tuc-su-kien/tap-doan-sekisho-cam-ket-dong-hanh-cung-bach-khoa-ha-noi-trong-hoat-dong-ngoai-khoa-599006.html" 
+                                class="btn">Đọc thêm</a>
                             </div>
                         </div>
 
@@ -467,11 +468,12 @@
                             <div class="info">
                                 <span class="date">21/11/2023</span>
                                 <h3 class="title">
-                                    <a href="#!">
+                                    <a href="https://hust.edu.vn/vi/news/cong-tac-dang-va-doan-the/le-ky-ket-thoa-thuan-hop-tac-giua-dai-hoc-bach-khoa-ha-noi-va-cong-ty-sekisho-nhat-ban-493061.html">
                                         Lễ ký kết thoả thuận hợp tác giữa Đại học Bách khoa Hà Nội và Công ty SEKISHO (Nhật Bản)
                                     </a>
                                 </h3>
-                                <a href="#!" class="btn">Đọc thêm</a>
+                                <a href="https://hust.edu.vn/vi/news/cong-tac-dang-va-doan-the/le-ky-ket-thoa-thuan-hop-tac-giua-dai-hoc-bach-khoa-ha-noi-va-cong-ty-sekisho-nhat-ban-493061.html" 
+                                class="btn">Đọc thêm</a>
                             </div>
                         </div>
 
@@ -486,11 +488,12 @@
                             <div class="info">
                                 <span class="date">25/6/2023</span>
                                 <h3 class="title">
-                                    <a href="#!">
+                                    <a href="https://hust.edu.vn/vi/news/hoat-dong-chung/sekisho-tiep-tuc-ho-tro-sinh-vien-bach-khoa-trong-dao-tao-va-ngoai-khoa-654668.html">
                                         Tập đoàn Nhật Bản Sekisho tiếp tục hỗ trợ sinh viên Bách khoa trong đào tạo và ngoại khóa
                                     </a>
                                 </h3>
-                                <a href="#!" class="btn">Đọc thêm</a>
+                                <a href="https://hust.edu.vn/vi/news/hoat-dong-chung/sekisho-tiep-tuc-ho-tro-sinh-vien-bach-khoa-trong-dao-tao-va-ngoai-khoa-654668.html" 
+                                class="btn">Đọc thêm</a>
                             </div>
                         </div>
                     </div> 
@@ -525,7 +528,7 @@
                                     class="icon"
                                 />
                             </a>
-                            <a href="#!">
+                            <a href="https://www.facebook.com/dhbkhanoi">
                                 <img
                                     src="./assets/icons/facebook.svg"
                                     alt="Facebook"
@@ -593,17 +596,17 @@
                         <ul class="list">
                             <li>
                                 <a href="#!">
-                                    <strong>Vị trí:</strong> Số 1 Trần Đại Nghĩa, Phường Bạch Mai, Quận Hai Bà Trưng, Thành phố Hà Nội
+                                    <strong>Vị trí:</strong> Số 1 Đại Cồ Việt, Quận Hai Bà Trưng, Thành phố Hà Nội, Việt Nam
                                 </a>
                             </li>
                             <li>
                                 <a href="#!">
-                                    <strong>Email:</strong> daihocbachkhoa@gmail.com
+                                    <strong>Email:</strong>  tttts@hust.edu.vn 
                                 </a>
                             </li>
                             <li>
                                 <a href="#!">
-                                    <strong>Phone:</strong> +84 0123456789
+                                    <strong>Phone:</strong> +84 024 38692243
                                 </a>
                             </li>
                         </ul>
