bo sung contact

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                             <li>
                                 <a href="#Blog">Blog</a>
                             </li>
+                            <li>
+                                <a href="#Contact">Contact</a>
+                            </li>
                         </ul>
                     </nav>
 
@@ -507,7 +510,7 @@
         </main>
 
         <!-- Footer -->
-        <footer class="footer">
+        <footer class="footer" id="Contact">
             <div class="main-content">
                 <div class="row">
                     <!-- Column 1 -->
